# Reesp

./: .gitignore  README.md  best_structured_encoder.pth  preprocessor.pkl  pyproject.toml  structured_encoder_complete.pth
notebooks/: 1-1-2-testing_import.py  1-2-Datacollect.py  1-2-test.py  pandas_test.py
src/: functest2.py
src/dataset_building/: data_func.py  databuilder.py  functest.py  generator.py  main.py
src/neuralnet/encoders/: data_preprocessor.py  structured_data.py
tests/: 2-1-1-Fulltested.py  data_preprocessor.py
tests/stest/: encoder.py  main.py
