[project]
name = "reesp"
version = "0.0.1"
description = ""
authors = [
    {name = "Jonathan",email = "jb5nnhy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "marimo (>=0.15.2,<0.16.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "torch-summary (>=1.4.5,<2.0.0)",
    "pyparsing (>=3.2.3,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "openai (>=1.105.0,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
